name on socials no longer overlapping

--- a/app/assets/stylesheets/components/_socials_index.scss
+++ b/app/assets/stylesheets/components/_socials_index.scss
@@ -7,10 +7,9 @@
 }
 .carousel-item .name-cont {
   position: absolute;
-  transform: translate(-65%, -50%);
   font-size: 18px;
-  top: 5%;
-  left: 30%;
+  top: 3%;
+  left: 25px;
   z-index: 10;
   color: rgb(0, 0, 0);
   font-family: sans-serif;
